{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 39,
  "lineage": "628ebc79-5f21-0570-4865-169e9b66daea",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-0a795a41b6a9fc5b6",
            "domain": "vpc",
            "id": "eipalloc-0c7790312b701460c",
            "network_interface": "eni-033e9518b86d2d0db",
            "private_dns": "ip-172-16-42-185.us-east-2.compute.internal",
            "private_ip": "172.16.42.185",
            "public_dns": "ec2-18-190-47-129.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.47.129",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03657b56516ab7912",
            "arn": "arn:aws:ec2:us-east-2:204547554391:instance/i-0c449539ad4af963b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c449539ad4af963b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0922e54165c5c14cd",
            "private_dns": "ip-172-16-14-156.us-east-2.compute.internal",
            "private_ip": "172.16.14.156",
            "public_dns": "ec2-3-129-23-67.us-east-2.compute.amazonaws.com",
            "public_ip": "3.129.23.67",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01ab8813de69f5e13",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-022e4b8c3ea06a59c",
            "tags": {
              "Name": "webserver"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-01c8f73731a11fe60"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.Webserver",
            "aws_security_group.bastion",
            "aws_subnet.public1",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03657b56516ab7912",
            "arn": "arn:aws:ec2:us-east-2:204547554391:instance/i-0aa6b0ef68c7be7fa",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aa6b0ef68c7be7fa",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-01a3cbe84526ea11f",
            "private_dns": "ip-172-16-50-225.us-east-2.compute.internal",
            "private_ip": "172.16.50.225",
            "public_dns": "ec2-18-217-143-103.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.143.103",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0ef263c14300e106b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06b0470f0ff58e1e7",
            "tags": {
              "Name": "bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0ed7e978c1467920a"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.bastion",
            "aws_subnet.public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03657b56516ab7912",
            "arn": "arn:aws:ec2:us-east-2:204547554391:instance/i-090b464ad36eadb20",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-090b464ad36eadb20",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "newkey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08c6b48e296d8853f",
            "private_dns": "ip-172-16-89-174.us-east-2.compute.internal",
            "private_ip": "172.16.89.174",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-01ce1a53df79795b8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d9a82191884d2a42",
            "tags": {
              "Name": "database"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e987625e9eb90f5a"
            ]
          },
          "dependencies": [
            "aws_key_pair.keypair",
            "aws_security_group.Webserver",
            "aws_security_group.bastion",
            "aws_security_group.database",
            "aws_subnet.private1",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "blog",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204547554391:internet-gateway/igw-0481aefaa3a0ad4fb",
            "id": "igw-0481aefaa3a0ad4fb",
            "owner_id": "204547554391",
            "tags": {
              "Name": "blog-igw"
            },
            "vpc_id": "vpc-0b8ba4e611c959ba5"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0c7790312b701460c",
            "id": "nat-06f012e2ee3a4f4cc",
            "network_interface_id": "eni-033e9518b86d2d0db",
            "private_ip": "172.16.42.185",
            "public_ip": "18.190.47.129",
            "subnet_id": "subnet-06b0470f0ff58e1e7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f03da4ea10c69f97",
            "owner_id": "204547554391",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-06f012e2ee3a4f4cc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blog-private"
            },
            "vpc_id": "vpc-0b8ba4e611c959ba5"
          },
          "dependencies": [
            "aws_nat_gateway.Nat-gw",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08d3c01b1139074df",
            "owner_id": "204547554391",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0481aefaa3a0ad4fb",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "blog-public"
            },
            "vpc_id": "vpc-0b8ba4e611c959ba5"
          },
          "dependencies": [
            "aws_internet_gateway.blog",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02da73e8407a54e98",
            "route_table_id": "rtb-0f03da4ea10c69f97",
            "subnet_id": "subnet-0d9a82191884d2a42"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.Nat-gw",
            "aws_route_table.private",
            "aws_subnet.private1",
            "aws_subnet.public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-041da5f984c255386",
            "route_table_id": "rtb-08d3c01b1139074df",
            "subnet_id": "subnet-022e4b8c3ea06a59c"
          },
          "dependencies": [
            "aws_internet_gateway.blog",
            "aws_route_table.public",
            "aws_subnet.public1",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b9a0310fec8321ee",
            "route_table_id": "rtb-08d3c01b1139074df",
            "subnet_id": "subnet-06b0470f0ff58e1e7"
          },
          "dependencies": [
            "aws_internet_gateway.blog",
            "aws_route_table.public",
            "aws_subnet.public2",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "Webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204547554391:security-group/sg-01c8f73731a11fe60",
            "description": "Allow ssh from bastion , 80 from all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01c8f73731a11fe60",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed7e978c1467920a"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Webserver",
            "name_prefix": "",
            "owner_id": "204547554391",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webserver"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ba4e611c959ba5"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204547554391:security-group/sg-0ed7e978c1467920a",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ed7e978c1467920a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "bastion",
            "name_prefix": "",
            "owner_id": "204547554391",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bastion"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ba4e611c959ba5"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204547554391:security-group/sg-0e987625e9eb90f5a",
            "description": "Allow ssh from bastion , 3306 from webserver",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e987625e9eb90f5a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ed7e978c1467920a"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01c8f73731a11fe60"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database",
            "name_prefix": "",
            "owner_id": "204547554391",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8ba4e611c959ba5"
          },
          "dependencies": [
            "aws_security_group.Webserver",
            "aws_security_group.bastion",
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204547554391:subnet/subnet-0d9a82191884d2a42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "172.16.64.0/19",
            "id": "subnet-0d9a82191884d2a42",
            "map_public_ip_on_launch": false,
            "owner_id": "204547554391",
            "tags": {
              "Name": "blog-private1"
            },
            "vpc_id": "vpc-0b8ba4e611c959ba5"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204547554391:subnet/subnet-022e4b8c3ea06a59c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "172.16.0.0/19",
            "id": "subnet-022e4b8c3ea06a59c",
            "map_public_ip_on_launch": true,
            "owner_id": "204547554391",
            "tags": {
              "Name": "blog-public1"
            },
            "vpc_id": "vpc-0b8ba4e611c959ba5"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204547554391:subnet/subnet-06b0470f0ff58e1e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "172.16.32.0/19",
            "id": "subnet-06b0470f0ff58e1e7",
            "map_public_ip_on_launch": true,
            "owner_id": "204547554391",
            "tags": {
              "Name": "blog-public2"
            },
            "vpc_id": "vpc-0b8ba4e611c959ba5"
          },
          "dependencies": [
            "aws_vpc.blog"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "blog",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:204547554391:vpc/vpc-0b8ba4e611c959ba5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/16",
            "default_network_acl_id": "acl-0143ae7323eb8929c",
            "default_route_table_id": "rtb-05cf1c4d55ccb1859",
            "default_security_group_id": "sg-0c89857b138e7a6d9",
            "dhcp_options_id": "dopt-d57dfabe",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0b8ba4e611c959ba5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05cf1c4d55ccb1859",
            "owner_id": "204547554391",
            "tags": {
              "Name": "blog"
            }
          }
        }
      ]
    }
  ]
}